# agent

./: Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  agent.doxygen  agent.kdevelop  agent.kdevelop.pcs  agent.kdevprj  agent.kdevses  config.h  config.status  configure  configure.in  configure.in.in  libtool
agent/: Box.C  Box.h  ClearBall.C  ClearBall.h  Communicate.C  Communicate.h  Formations.C  Formations.h  Handleball.C  Handleball.h  Interception.C  Interception.h  Makefile  Makefile.am  Makefile.in  MemAction.C  MemAction.h  MemOption.C  MemOption.h  MemPlayer.C  MemPlayer.h  MemPosition.C  MemPosition.h  Memory.C  Memory.h  Offense.C  Offense.h  Playposition.C  Playposition.h  Processor.C  Processor.h  SetPlay.C  SetPlay.h  archiveIt  behave.c  behave.h  client.c  client.conf  client.h  cross.c  (+47 more)
agent/RC_start_scripts/: kill3  start.sh  start1  start3
agent/coach_analize/: 1.txt  1_new.txt  2.txt  2_new.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
agent/logs/: dellogs.sh
agent/weights/passweights/: passweights.conf
agent/weights/shootweights/: shootweights.conf
