####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = agent

## INCLUDES were found outside kdevelop specific part

agent_SOURCES = utils.C test.C shoot.C SetPlay.C scenario_tok.C scenario_par.C scenario.C Processor.C positioning.C Playposition.C pass.C parse.C Offense.C netif.C MemPosition.C MemPlayer.C Memory.C MemOption.C MemAction.C kick.C Interception.C Handleball.C goalie.C geometry.C Formations.C dribble.C defense.C cross.C Communicate.C client.C ClearBall.C Box.C behave.C 
agent_LDADD   = 


EXTRA_DIST = behave.C behave.h Box.C Box.h ClearBall.C ClearBall.h client.C client.h Communicate.C Communicate.h cross.C cross.h defense.C defense.h dribble.C dribble.h Formations.C Formations.h geometry.C geometry.h goalie.C goalie.h Handleball.C Handleball.h Interception.C Interception.h kick.C kick.h MemAction.C MemAction.h MemOption.C MemOption.h Memory.C Memory.h MemPlayer.C MemPlayer.h MemPosition.C MemPosition.h netif.C netif.h Offense.C Offense.h parse.C parse.h pass.C pass.h Playposition.C Playposition.h positioning.C positioning.h Processor.C Processor.h scenario.C scenario.h scenario_par.C scenario_par.h scenario_tok.C serveroptions.h SetPlay.C SetPlay.h shoot.C shoot.h test.C test.h types.h utils.C utils.h client.conf formations.conf scenario.data 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
agent_LDFLAGS = $(all_libraries) 
                                                                                
